--- a/libraries/difxmessage/ChangeLog
+++ b/libraries/difxmessage/ChangeLog
@@ -2,6 +2,7 @@ Version 2.8.1
 ~~~~~~~~~~~~~
 * Version post DiFX 2.8.1
 * Fix usage of recvfrom() and add some associated comments
+* difxparse.c: use new macro strncpy_warn to safely copy a string with possible truncation; emit a warning if truncation happens.
 
 Version 2.8.0
 ~~~~~~~~~~~~~
