--- a/applications/vex2difx/ChangeLog
+++ b/applications/vex2difx/ChangeLog
@@ -14,6 +14,7 @@ Version 3.1.0
 * Update wiki to ATNF -- note that even this will be old soon and the new github link will replace it.
 * Allow "NONE" data format.  This was allowed in previous vex parser version, but got lost when vex2 was added.
 * Fix "datastreams with no data" bug.  This was triggered when there was a job break in the middle of a scan and an antenna only had data during one part of the broken scan
+* Fix format override where VDIF/CODIF wouldn't change sampling type in some cases
 
 Version 3.0.0
 -------------
