--- a/applications/mk5daemon/ChangeLog
+++ b/applications/mk5daemon/ChangeLog
@@ -1,3 +1,9 @@
+Version 2.9.0
+~~~~~~~~~~~~~
+* Version for DiFX-2.9.0
+* New Mark6 message types
+* Support for >1 expansion unit
+
 Version 2.8.0
 ~~~~~~~~~~~~~
 * Version for DiFX-2.8, Nov 4, 2022
