Allow Y1, Y2, Y3 and Y4 gain curves to be treated in same way as VLBA gain curves

--- a/applications/difx2fits/ChangeLog
+++ b/applications/difx2fits/ChangeLog
@@ -27,6 +27,7 @@ Version 3.8.0
 * --two-pcal-tables option added: Will create one table as prescribed in the .input files and the other containing all of the pulse cal tones. ***experimental***
 * Use vanVleck correction of 1.0 in case of >= 8 bits per sample for both datastreams if an explicit value is not available.
 * --freqlist <freqs MHz> option added: keep only IFs with a low edge frequency found in the comma separated list, discard the rest
+* Add y1, y2, y3 and y4 as legal antennas when adding gain VLBA-style gain tables
 
 Version 3.7.0
 * Post DiFX-2.6
