update some outdated URLs in programs and documentation

--- a/doc/userguide/difx_installation.tex
+++ b/doc/userguide/difx_installation.tex
@@ -239,7 +239,6 @@ Note that these variables will be needed not only in interactive shells, but als
 To download, compile and install the software, you will need the standard gnu tools (gcc, libtool, autoconf, automake, make, ...), python, subversion, and of course ssh.
 Be aware that many distributions don't install by default all of these needed tools (xubuntu for example installs very few development tools by default.
 Relatively few external libraries are used.
-It also assumes you have an account that allows access to the subversion repository at \url{https://svn.atnf.csiro.au}.
 
 \begin{figure}[h]
 \begin{center}
@@ -382,16 +381,6 @@ If this library is not installed and the extra functionality that requires FFTW 
 
 
 
-% streamstor ---------------------------------------------- INCOMPLETE --------
-
-
-
-
-
-
-
-
-
 % difxio ----------------------------------------------------------------------
 
 \subsubsection{difxio} \label{sec:difxio}
@@ -402,7 +391,7 @@ It also contains functionality to completely represent the configuration of a Di
 To install:
 \begin{enumerate}
 \item {\tt cd} {\em sourcedir}
-\item Check out the subversion repository: \\
+\item Check out the repository: \\
 {\tt svn co }\url{https://svn.atnf.csiro.au/difx/libraries/difxio/branches/difx-1.5}{\tt\ difxio} \\
 {\em Note: don't forget the {\tt difxio} at the end of the line!}
 \item Enter the new directory {\tt cd difxio}
