--- a/applications/polconvert/src/Changelog
+++ b/applications/polconvert/src/Changelog
@@ -1,3 +1,7 @@
+pre-v2.0.8
+- fix for the QA2TABLES env var
+- updated documentation on drivepolconvert.py -q <version>
+
 v2.0.7
 - progress on the merger between CASA and standalone cases
 - argument reconciliation between the two branches (task* and CASA*)
