--- a/utilities/calcif2/ChangeLog
+++ b/utilities/calcif2/ChangeLog
@@ -2,6 +2,7 @@ calcif2
 ~~~~~~~
 Version 2.8.1
 * Add "--zero" option, causing all delays to be set to zero.  This is useful for zero-baseline testing.
+* Update URL for VMF3 data products
 
 Version 2.8.0
 * Bump version for DiFX-2.8, Nov 4, 2022
