--- a/applications/mk5daemon/ChangeLog
+++ b/applications/mk5daemon/ChangeLog
@@ -2,6 +2,7 @@ Version 2.9.0
 ~~~~~~~~~~~~~
 * Version for DiFX-2.9.0
 * New Mark6 message types
+* Added script for executing mark6 specific commands through  mk5daemon
 * Support for >1 expansion unit
 
 Version 2.8.0
