--- a/libraries/mark6meta/ChangeLog
+++ b/libraries/mark6meta/ChangeLog
@@ -1,11 +1,9 @@
-Version 2.9.0
+Version 0.4
 -------------
-* version bump prior to 2.9.0 release
 * support  Mark6 units with more than 4 slots
-* properly determine position of disks on the SAS controller bus independently
-from controller manufacturer logic
-* controller identification by PCI bus ID to preserve mounting logic through
-machine reboots
+* properly determine position of disks on the SAS controller bus independently from controller manufacturer logic
+* controller identification by PCI bus ID to preserve mounting logic through machine reboots
+* Version for DiFX-2.9
 
 Version 0.3
 -----------
