--- a/utilities/vdifsim/ChangeLog
+++ b/utilities/vdifsim/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.2
+-----------
+* Version 0.1.1 below existed for quite some time with different commits happening
+* But the vdifsim version number was only bumped right before tagging 2.9
+* Version for DiFX-2.9
+
 Version 0.1.1
 -------------
 * Fix issue where the program generates 1 second too much data
